--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "@fortawesome/vue-fontawesome": "^2.0.6",
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "deepcopy": "^2.1.0",
+    "echarts": "^5.3.2",
     "element-ui": "2.13.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
     "normalize.css": "7.0.0",
     "path-to-regexp": "2.4.0",
