--- a/frontend/.env.development
+++ b/frontend/.env.development
@@ -2,4 +2,5 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://127.0.0.1:5000/'
+VUE_APP_BASE_API = 'http://127.0.0.1:8000/'
+PORT = '3000'
