--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -19,12 +19,15 @@ Jinja2==3.1.2
 kombu==5.2.4
 MarkupSafe==2.1.1
 msgpack==1.0.3
+netaddr==0.8.0
 packaging==21.3
 prompt-toolkit==3.0.29
 pymongo==4.1.1
 pyparsing==3.0.9
 python-dateutil==2.8.2
 python-dotenv==0.20.0
+python-masscan==0.1.6
+python-nmap==0.7.1
 pytz==2022.1
 redis==4.3.1
 requests==2.27.1
