--- a/docker-compose.build.yml
+++ b/docker-compose.build.yml
@@ -5,6 +5,8 @@ services:
     restart: always
     # ports:
     #   - 127.0.0.1:5672:5672
+    volumes:
+      - "./docker/rabbitmq/advanced.config:/etc/rabbitmq/conf.d/advanced.config"
   redis:
     image: redis
     restart: always
