--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: rabbitmq
     restart: always
     volumes:
-      - "./docker/rabbitmq/advanced.config:/etc/rabbitmq/conf.d/advanced.config"
+      - "./docker/rabbitmq/advanced.config:/etc/rabbitmq/advanced.config"
     # ports:
     #   - 127.0.0.1:5672:5672
   redis:
